<resources>
    <string name="app_name">My Application</string>
    <string name="bug2023">©BUG2023</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notFoundLodging">아직 찜한 숙소가 없어요</string>
    <string name="notFoundLodging2">아직 찜한 숙소가 없어요</string>
    <string name="notFoundSpace">아직 찜한 공간이 없어요</string>
    <string name="notFountTicket">아직 찜한 티켓이 없어요</string>
    <string name="guide_text1">마음에 드는 숙소를 찜 해두면</string>
    <string name="guide_text2">빠르게 다시 찾아볼 수 있어요.</string>
    <string name="guide_text3">마음에 드는 티켓을 찜 해두면</string>
    <string name="guide_text4">마음에 드는 공간을 찜 해두면</string>

    <!-- Fullscreen custom dialog -->
    <string name="default_dialog_title">다이얼로그 타이틀</string>
    <string name="default_dialog_message">다이얼로그 메시지</string>
    <string name="default_dialog_submit_caption">확인</string>
    <string name="default_dialog_cancel_caption">취소</string>
    <string name="title">요기어때.</string>
    <string name="terms1"><u>이용약관 동의</u> (필수)</string>
    <string name="terms2"><u>만 14세 이상 확인</u> (필수)</string>
    <string name="terms3"><u>개인정보 수집 및 이용 동의</u> (필수)</string>
    <string name="terms4"><u>개인정보 수집 및 이용 동의</u> (선택)</string>
    <string name="terms5"><u>마켓팅 알람 수신 동의</u> (선택)</string>
    <string name="terms6"><u>위치기반 서비스 이용약관 동의</u> (선택)</string>
    <string name="pw_reset"><u>비밀번호 재설정</u></string>
</resources>