<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btn_next"
        android:layout_width="341dp"
        android:layout_height="59dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#219AA5"
        android:text="다음"
        android:textColor="#D3D3D3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.409" />


    <View
        android:id="@+id/view2"
        android:layout_width="341dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="121dp"
        android:fontFamily="@font/jalnan"
        android:text="초면에 실례지만,"
        android:textColor="#333333"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="@font/jalnan"
        android:text="가 필요해요"
        android:textColor="#333333"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/jalnan"
        android:text="약관 동의"
        android:textColor="#219AA5"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/terms6"
        android:textColor="#A0878383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/terms3"
        android:textColor="#A0878383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/terms1"
        android:textColor="#A0878383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/terms4"
        android:textColor="#A0878383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/terms5"
        android:textColor="#A0878383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/terms2"
        android:textColor="#A0878383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <CheckBox
        android:id="@+id/cbx_all7"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <CheckBox
        android:id="@+id/cbx_all6"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbx_all2" />

    <CheckBox
        android:id="@+id/cbx_all2"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbx_all3" />

    <CheckBox
        android:id="@+id/cbx_all"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <CheckBox
        android:id="@+id/cbx_all4"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbx_all" />

    <CheckBox
        android:id="@+id/cbx_all5"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbx_all4" />

    <CheckBox
        android:id="@+id/cbx_all3"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbx_all5" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="전체 동의"
        android:textColor="#219AA5"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view2"
        tools:layout_editor_absoluteY="252dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="19dp"
        android:text="(선택항목 포함)"
        android:textColor="#A0878383"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>